--- a/resources/sass/itcss/2_settings/settings.scss
+++ b/resources/sass/itcss/2_settings/settings.scss
@@ -7,3 +7,12 @@ $colors: (
 );
 
 @import "./root";
+
+@font-face{
+   font-family: 'JetBrains Mono';
+   src: url('/css/fonts/mono/eot/JetBrainsMono-Regular.eot') format('embedded-opentype'),
+        url('/css/fonts/mono/woff2/JetBrainsMono-Regular.woff2') format('woff2'),
+        url('/css/fonts/mono/woff/JetBrainsMono-Regular.woff') format('woff');
+   font-weight: normal;
+   font-style: normal;
+}
