--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -778,7 +778,7 @@ pre, pre *, code, code * {
 
 pre {
   overflow-x: auto;
-  margin-top: clamp(10px, calc(4rem + var(--baseline)), 100px);
+  margin-top: clamp(10px, calc(1rem + var(--baseline)), 100px);
   margin-bottom: clamp(10px, calc(4rem + var(--baseline)), 100px);
   background: #1d1f21;
   color: #eee;
@@ -787,6 +787,20 @@ pre {
   padding-bottom: 1rem;
   padding-left: 2rem;
   padding-right: 2rem;
+  position: relative;
+}
+
+pre::before {
+  position: absolute;
+  top: -1px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  display: block;
+  content: "";
+  background: #FFF;
+  -webkit-clip-path: polygon(100% 0, 0 0, 0 100%);
+          clip-path: polygon(100% 0, 0 0, 0 100%);
 }
 
 pre.language-bash {
