--- a/resources/sass/itcss/5_objects/_doc-body.scss
+++ b/resources/sass/itcss/5_objects/_doc-body.scss
@@ -5,7 +5,7 @@
 
 // We want the content to be more narrow, this is were we control that.
 // Any element that has to be narrow like the text, include it in a not.
-.o-doc-body *:not(code):not(pre),
+.o-doc-body *:not(code):not(pre):not(.c-copy-code):not(.c-copy-code img),
 pre.language-bash {
     width: min(800px, 100%);
     @apply mx-auto;
