--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    > div {
-        // background-color: red !important;
-    }
+* {
+    font-size: 16px;
 }
