--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,3 +5,11 @@
 * {
     font-size: 16px;
 }
+
+body {
+    @apply bg-black text-white;
+}
+
+body, .container--screen {
+    @apply min-h-screen max-w-full;
+}
