--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -6,10 +6,10 @@
     font-size: 16px;
 }
 
-body {
-    @apply bg-black text-white;
-}
+// body {
+//     @apply bg-black text-white;
+// }
 
-body, .container--screen {
-    @apply min-h-screen max-w-full;
-}
+// body, .container--screen {
+//     @apply min-h-screen max-w-full;
+// }
