--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -6,10 +6,13 @@
     font-size: 16px;
 }
 
-// body {
-//     @apply bg-black text-white;
-// }
+// LastPass Autofill Fix
+[autocomplete="off"] + div[data-lastpass-icon-root="true"] {
+    opacity: 0 !important;
+    display: none !important;
+}
 
-// body, .container--screen {
-//     @apply min-h-screen max-w-full;
-// }
+[autocomplete="off"] + div[data-lastpass-infield="true"] {
+    opacity: 0 !important;
+    display: none !important;
+}
